# Adam-Thao-QA-Automation-Portfolio

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  test-results.json
.github/workflows/: playwright.yml  (+1 more)
layered-architecture-tests/: Dockerfile.test  README.md  jest.config.js  package.json
restful-booker-api-tests/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
restful-booker-api-tests/.github/workflows/: api-tests.yml
restful-booker-api-tests/src/: __init__.py  api_client.py  models.py  schemas.py
restful-booker-api-tests/src/endpoints/: __init__.py  auth.py  booking.py  config.py  ping.py
restful-booker-api-tests/tests/: __init__.py  conftest.py  test_authentication.py  test_booking_create.py  test_booking_delete.py  test_booking_read.py  test_booking_update.py  test_boundary_values.py  test_content_negotiation.py  test_health_check.py  test_internationalization.py  test_validation.py
restful-booker-api-tests/tests/data/: __init__.py  test_data.py
sauce-demo-ui-tests/: .env.example  .gitignore  .prettierignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
sockshop-contract-tests/: .env.example  .gitignore  README.md  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
tests/: cart.spec.ts  checkout.spec.ts  inventory.spec.ts  login.spec.ts
whitebox-testing-portfolio/: .env.example  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
(+81 files in other folders)
